Fixed toolbar alignment.

--- a/modules/gui/frontend/src/app/home/body/process/recipe/classification/panels/classificationToolbar.module.css
+++ b/modules/gui/frontend/src/app/home/body/process/recipe/classification/panels/classificationToolbar.module.css
@@ -14,11 +14,3 @@
     --look-disabled-l: 20%;
     --look-disabled-a: .9;
 }
-
-.top {
-    margin-top: 3rem;
-}
-
-.bottom {
-    margin-bottom: 3rem;
-}
